# camera-frames

./: .gitignore  404.html  README.md  app.css  assets.json  biome.json  camera-frames-rad-bundle-sw.js  docs.html  index.html  package-lock.json  package.json  tsconfig.json  version.json  vite.config.js
.local/: architecture-roadmap.md  brush-thread-handoff.md  feature-map.md  handoff.md  splat-edit-mode-plan.md
assets/: __vite-browser-external-GEAkWoNM.js  docs-0_S1tAY7.js  docs-9n-6Fyfu.js  docs-A2J2Xisi.js  docs-B0EgGVm1.js  docs-B8k5PaYO.js  docs-BACuQDiu.js  docs-BKlGVS8B.js  docs-BLR6SB4q.js  docs-BP5ZEo22.js  docs-BPUgwiaS.js  docs-BSHU4rcc.js  docs-BUzsl4CV.js  docs-Be9zTfY1.js  docs-Bg501WRL.js  docs-BmqUX3in.js  docs-Bn2i6XnQ.js  docs-C-l9gQij.js  docs-C3-WvP1O.js  docs-C5Gb5AjZ.js  docs-C81evPAb.js  docs-CFLDr0h6.js  docs-CM1z3Ci7.js  docs-CMwVN3ik.js  docs-CQXmX7iP.js  docs-CUmSZb2G.js  docs-CYZEDOEL.js  docs-C_J7Q0XJ.js  docs-Cci_-hy5.js  docs-CfRFtfhp.js  docs-Cg4ZJlO3.js  docs-CowM6ZS0.js  docs-CuIh7tOF.js  docs-Cug0zncq.js  docs-D1PHjQRS.js  docs-D6QyGsMJ.js  docs-DC-4Lk-s.js  docs-DCfoyyPQ.js  docs-DDnfXD8j.js  docs-DFvIvyMR.js  (+135 more)
docs/: CameraFramesFeatures.md  camera_frames_requirements.md  desktop-build.md  legacy-ssproj-compatibility.md  local-test-scenarios.md  rad-streaming-investigation.md
public/: camera-frames-rad-bundle-sw.js
scripts/: audit-release-paths.mjs  browser-smoke.mjs  build-rad-encoder.mjs  build-tauri.mjs  (+6 more)
src/: i18n.js  (+14 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+538 files in other folders)
